Надо подумать как оформить; но с первого раза может показаться, что в списке четыре главы государства.

--- a/Venälaižen_valdkundan_pämehed.mw
+++ b/Venälaižen_valdkundan_pämehed.mw
@@ -89,9 +89,8 @@ Se om '''Venälaižen valdkundan pämehiden''' nimikirjutez.
 
 == Nügüd'aigaine [[Venäma]] ==
 # [[Jel'cin Boris|Boris Jel'cin]] (1991—2000<!--"отрёкся" ровно в полночь нового тысячелетия; поэтому пишу 2000-->)
-# [[Putin Vladimir|Vladimir Putin]] (2000—2008)
+# [[Putin Vladimir|Vladimir Putin]] (2000—2008, 2012— )
 # [[Medvedev Dmitrii|Dmitrii Medvedev]] (2008—2012)
-# [[Putin Vladimir|Vladimir Putin]] (2012— )
 
 [[Kategorii:Nimikirjutesed]]
 [[Kategorii:Venäma]]
