--- a/Čistalöv_Veniamin.mw
+++ b/Čistalöv_Veniamin.mw
@@ -1,7 +1,8 @@
 [[Fail:Veniamin Tšistaljov.jpg|thumb|right|215px|Veniamin Čistalöv]]
-'''Veniamin Timofejevič (Tima Ven') Čistalöv''' ([[Komin kel'|komi]] ''Тима Вень'', [[Venäkel'|ven.]] ''Вениамин Тимофеевич Чисталёв''; [[8. reduku]] [[1890]], [[Pomozdino]], [[Vologdan gubernii]], — [[13. reduku]] [[1939]], [[Siktivkar]]) om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundaline]] [[komilaižed|komilaine]] kirjutai, runonkirjutai, opendai da kändai. Komin literaturan klassik.
+'''Veniamin Timofejevič (Tima Ven') Čistalöv''' ([[Komin kel'|komi]] ''Тима Вень'', [[Venäkel'|ven.]] ''Вениамин Тимофеевич Чисталёв''; [[8. reduku]] [[1890]], [[Pomozdino]], [[Vologdan gubernii]], — [[13. reduku]] [[1939]], [[Siktivkar]]) om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundaline]] [[komilaižed|komilaine]] kirjutai, runokirjutai, opendai da kändai. Komin literaturan klassik.
 
 {{stub}}
 
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
 [[Kategorii:Venäman kirjutajad]]
+[[Kategorii:Komin kirjutajad]]
