Отчество нашёл, но вообще инфы очень мало

--- a/Andrejeva_Alevtina.mw
+++ b/Andrejeva_Alevtina.mw
@@ -1,4 +1,4 @@
-'''Alevtina Andrejeva''' (1938 — 2001) — [[Vepsän kel'|vepsän]] runokirjutai. Runod kodirandas, sen ristituiš, armastuses, elos. Runokirj "Koivuine" (surmanjäl'ghine, 2003), runod erazvuiččiš keradusiš, aiglehtesiš, lehtesiš. Oli ranu Karjalan televizijas (vepsän redakcijas).
+'''Alevtina Ivanovna Andrejeva''' (1938 — 2001) — [[Vepsän kel'|vepsän]] runokirjutai. Runod kodirandas, sen ristituiš, armastuses, elos. Runokirj "Koivuine" (surmanjäl'ghine, 2003), runod erazvuiččiš keradusiš, aiglehtesiš, lehtesiš. Oli ranu Karjalan televizijas (vepsän redakcijas).
 {{stub}}
 
 [[Kategorii:Kirjutajad kirjamišton mödhe]]
