*Empty MediaWiki Message*

--- a/Catch_the_Catch.mw
+++ b/Catch_the_Catch.mw
@@ -3,7 +3,7 @@
 == Pajoiden kirjutez ==
 # ''[['Cause You Are Young]]'' (4:43)
 # ''[[I Can Lose My Heart Tonight]]'' (5:53)
-# ''You Shot a Hole In My Soul'' (5:15)
+# ''[[You Shot a Hole In My Soul]]'' (5:15)
 # ''[[One Night's Not Enough]]'' (3:22)
 # ''[[Strangers by Night]]'' (5:42)
 # ''Stay'' (5:47)
