--- a/C._C._Catch:an_diskografii.mw
+++ b/C._C._Catch:an_diskografii.mw
@@ -94,3 +94,5 @@ Se om täuz' '''[[C. C. Catch]]-kollektivan diskografii'''.
 
 [[Kategorii:Diskografijad]]
 [[Kategorii:C. C. Catch|D]]
+
+[[de:C. C. Catch/Diskografie]]
