*Empty MediaWiki Message*

--- a/Hear_What_I_Say.mw
+++ b/Hear_What_I_Say.mw
@@ -1,6 +1,6 @@
-'''«Hear What I Say»''' (''Kulde miše minä sanu'') om [[C. C. Catch]]:an 5. al'bom, pästtud [[1989]]. vodes.
+'''«Hear What I Say»''' (''Kundle, midä sanun'') om [[C. C. Catch]]:an 5. al'bom, pästtud [[1989]]. vodes.
 
-Se om kaikiš satusekatomemb pajatajan al'bom; se (kut i sen singlad) oliba vaiše pen' satuz saksalaižiš čartoiš. Päiči [[disko]]s, al'bomas om [[hausmuzik|haus]]-, [[fank]]- i [[svingbit]]-žanroin valatoitused.
+Se om kaikiš satusetomemb pajatajan al'bom; se (kut i sen singlad) oliba vaiše pen' satuz saksalaižiš čartoiš. Päiči [[disko]]s, al'bomas om [[hausmuzik|haus]]-, [[fank]]- i [[svingbit]]-žanroin valatoitused.
 
 == Pajoiden kirjutez ==
 # ''[[Midnight Hour]]'' (4:35)
