*Empty MediaWiki Message*

--- a/Kolan_norvegijalaižed.mw
+++ b/Kolan_norvegijalaižed.mw
@@ -1,3 +1,4 @@
+[[Fail:Норвежская семья Ойен - одна из первых, переселившихся на Мурманский берег. Колония Цып-Наволок. 1930-е годы..JPG|pisi]]
 '''Kolin norvegijalaižed''' ([[norvegijan kel'|norv.]]: ''kolanordmenn'', [[venäkel'|ven.]]: ''кольские норвежцы'') oma [[norvegijalaižed|norvegijalaižiden]] etnografine grupp.
 
 Elädas [[Venäma]]s ([[Murmanskan agj]]as), hot' äjad hül'gäižiba valdkundan jo. Ühthine lugu om tarkoiktas tundmatoi. Pagištas [[norvegijan kel'|norvegijan]] da [[venäkel'|venäkelil]].
