--- a/Kolan_norvegijalaižed.mw
+++ b/Kolan_norvegijalaižed.mw
@@ -1,4 +1,4 @@
-[[Fail:Норвежская семья Ойен - одна из первых, переселившихся на Мурманский берег. Колония Цып-Наволок. 1930-е годы..JPG|thumb|right|275px|Norvegijalaine Ojen-kanz — üks' ezmäižišpäi, ked tuliba elämaha [[Murmanskan rand]]ale. 1930-nded voded]]
+[[Fail:Норвежская семья Ойен - одна из первых, переселившихся на Мурманский берег. Колония Цып-Наволок. 1930-е годы..JPG|thumb|right|275px|Norvegijalaine Ojen-kanz — üks' ezmäižišpäi, ked tuliba elämaha [[Murmanskan rand]]ale. [[Cipnavolok]]-kolonii. 1930-nded voded]]
 '''Kolin norvegijalaižed''' ([[norvegijan kel'|norv.]]: ''kolanordmenn'', [[venäkel'|ven.]]: ''кольские норвежцы'') oma [[norvegijalaižed|norvegijalaižiden]] etnografine grupp.
 
 Elädas [[Venäma]]s ([[Murmanskan agj]]as), hot' äjad hül'gäižiba valdkundan jo. Ühthine lugu om tarkoiktas tundmatoi. Pagištas [[norvegijan kel'|norvegijan]] da [[venäkel'|venäkelil]].
