--- a/You_Shot_a_Hole_In_My_Soul.mw
+++ b/You_Shot_a_Hole_In_My_Soul.mw
@@ -1,4 +1,4 @@
-'''«You Shot a Hole In My Soul»''' (''Sinä löi minun hengad'') om 3. [[C. C. Catch]]:an pajo «[[Catch the Catch]]»-al'bomaspäi. Pajon tekst om [[anglijan kel'|anglijan kelel]].
+'''«You Shot a Hole In My Soul»''' (''Löid reigun minun henges'') om 3. [[C. C. Catch]]:an pajo «[[Catch the Catch]]»-al'bomaspäi. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
 Sebrsingl (ühtes [[G. G. Anderson]]-pajatajanke) om pästtud [[1986]]-žes vodes.
 {{stub}}
