--- a/Zhi-Vago.mw
+++ b/Zhi-Vago.mw
@@ -2,7 +2,7 @@
  | Nimi = Zhi-Vago
  | Logo = 
  | Foto = 
- | Žanrad = [[evrodens]], [[haus (muzikaline žanr)|haus]]
+ | Žanrad = [[evrodens]], [[hausmuzik|haus]]
  | Voded = 1996—2002
  | Valdkund = Saksanma
  | Lidn = 
@@ -13,7 +13,7 @@
  | Eksühtnijad = 
  | Sait = 
 }}
-'''«Zhi-Vago»''' oli [[Saksanma|saksalaine]] evrodens- da [[haus (muzikaline žanr)|hausprojekt]] (vspäi [[1996]] vhesai [[2002]]).
+'''«Zhi-Vago»''' oli [[Saksanma|saksalaine]] evrodens- da [[hausmuzik|hausprojekt]] (vspäi [[1996]] vhesai [[2002]]).
 
 == Diskografii ==
 
