*Empty MediaWiki Message*

--- a/2_Eivissa.mw
+++ b/2_Eivissa.mw
@@ -2,7 +2,7 @@
  | Nimi = 2 Eivissa
  | Logo = 
  | Foto = 
- | Žanrad = [[evrodens]], [[haus (žanr)|haus]]
+ | Žanrad = [[evrodens]], [[hausmuzik|haus]]
  | Voded = 1997—2005
  | Valdkund = Saksanma
  | Lidn = Hamburg
