*Empty MediaWiki Message*

--- a/MoRandi.mw
+++ b/MoRandi.mw
@@ -2,7 +2,7 @@
  | Nimi = MoRandi
  | Logo = 
  | Foto = 
- | Žanrad = [[evropop]], [[haus (muzikaline žanr)|haus]]
+ | Žanrad = [[evropop]], [[hausmuzik|haus]]
  | Voded = 2004—…
  | Valdkund = Romanii
  | Lidn = Buharest
