*Empty MediaWiki Message*

--- a/Celebrate_(The_Love).mw
+++ b/Celebrate_(The_Love).mw
@@ -1,6 +1,6 @@
 '''«Celebrate (The Love)»''' (''Praznikoita (ičeze armastusen)'') om [[Zhi-Vago]]:n tetab pajo da ühtinnimine singl, kudamb om pästtud [[1996]]-žel vodel. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
-Se om klassine pajo [[haus (muzikaline žanr)|haus]]-žanras.
+Se om klassine pajo [[hausmuzik|haus]]-žanras.
 {{stub}}
 
 [[Kategorii:Pajod kirjamišton mödhe]]
