*Empty MediaWiki Message*

--- a/Pil'ved.mw
+++ b/Pil'ved.mw
@@ -6,7 +6,7 @@ Ned oma tobjimalaz troposferas. Pil'viden südäiolendha mülüb penikaižid til
 
 Pil'ved — tetab lirine mel'kuva, kudmban oma kävutanuded äjäd runokirjutajad (ozutsikš, venäläižed kirjutajad [[Aleksandr Puškin]], [[Gavriil Deržavin]]) ičeze sädusiš.
 
-[[Päiväine sistem|Päiväižen sistemas]], päiči [[Ma]]s, pil'ved oma kaikil planetoil-gigantoil, [[Mars (planet)|Marsal]], [[Vener (planet)|Veneral]], [[Titan (kaimdai)|Titanal]] da [[Triton (kaimdai)|Tritonal]]. Neniden planetoiden pil'vil om erazvuitte londuz, ozutesikš, Veneral om sanged pil'višt rikmuiktusespäi, a Titanan pil'ved tegese metanan vihmoišpäi lämudel −180°С.
+[[Päiväižen sistem|Päiväižen sistemas]], päiči [[Ma]]s, pil'ved oma kaikil planetoil-gigantoil, [[Mars (planet)|Marsal]], [[Vener (planet)|Veneral]], [[Titan (kaimdai)|Titanal]] da [[Triton (kaimdai)|Tritonal]]. Neniden planetoiden pil'vil om erazvuitte londuz, ozutesikš, Veneral om sanged pil'višt rikmuiktusespäi, a Titanan pil'ved tegese metanan vihmoišpäi lämudel −180°С.
 
 == Irdkosketused ==
 * [http://meteoweb.ru/cl004.php Pil'viden atlas] {{ref-ru}}
