--- a/Babaksad.mw
+++ b/Babaksad.mw
@@ -1,5 +1,5 @@
 [[Fail:Babax lanceolatus.jpg|thumbnail|right|250px|''[[Babax lanceolatus]]'']]
-'''Babaksad''' (''Babax'') om [[lindud|linduiden]] sugu ''[[Leiothrichidae]]''-sugukundas. Areal — [[Kitai]], [[Indii]] da [[Mjanmar]].
+'''Babaksad''' (''Babax'') om [[lindud|linduiden]] sugu ''[[Leiothrichidae]]''-sugukundas. Areal — [[Kitai]] (s. k. [[Honkong]]as), [[Indii]] da [[Mjanmar]].
 
 Om koume erikad, kaik om [[kadojad erikad|kadomižen grazindan]] al:
 * ''[[Babax koslowi]]'' (Kitai)
@@ -8,5 +8,3 @@ Om koume erikad, kaik om [[kadojad erikad|kadomižen grazindan]] al:
 {{stub}}
 
 [[Kategorii:Lindud]]
-
-[[ru:Бабаксы]]
