*Empty MediaWiki Message*

--- a/Babaksad.mw
+++ b/Babaksad.mw
@@ -1,5 +1,5 @@
 [[Fail:Babax lanceolatus.jpg|thumbnail|right|250px|''[[Babax lanceolatus]]'']]
-'''Babaksad''' (''Babax'') om [[lindud|linduiden]] sugu ''[[Leiothrichidae]]''-sugukundas. Areal — [[Kitai]] (s. k. [[Honkong]]as), [[Indii]] da [[Mjanmar]].
+'''Babaksad''' (''Babax'') om [[lindud|linduiden]] sugu ''[[Leiothrichidae]]''-sugukundas. Areal — [[Kitai]] (s. k. [[Honkong]]), [[Indii]] da [[Mjanmar]].
 
 Om koume erikad, kaik om [[kadojad erikad|kadomižen grazindan]] al:
 * ''[[Babax koslowi]]'' (Kitai)
