--- a/Odess.mw
+++ b/Odess.mw
@@ -50,7 +50,7 @@ Edel vl. 1795 lidn nimitihe '''Kacübijv''', möhemba — '''Hadžibei'''<ref>[h
 * {{FIN|#}} [[Oulu]], [[Suomenma]], 1957
 * {{GRC|#}} [[Pirei]], [[Grekanma]], 1993
 * {{DEU|#}} [[Regensburg]], [[Germanii]], 1990
-* {{ISR|#}} [[Roš-ha-Ain]], [[Izrail']], 2006
+* {{ISR|#}} [[Roš ha Ain]], [[Izrail']], 2006
 ||
 * {{HUN|#}} [[Seged]], [[Mad'jaranma]], 1977
 * {{HRV|#}} [[Split]], [[Horvatii]], 1964
@@ -58,10 +58,10 @@ Edel vl. 1795 lidn nimitihe '''Kacübijv''', möhemba — '''Hadžibei'''<ref>[h
 * {{LBY|#}} [[Tripoli]], [[Livii]]
 * {{ESP|#}} [[Valensii]], [[Ispanii]], 1981
 * {{CAN|#}} [[Vankuver]], [[Kanad]], 1971
-* {{BUL|#}} [[Varn]], [[Bolgarii]], 1958
+* {{BUL|#}} [[Varn (lidn)|Varn]], [[Bolgarii]], 1958
 |}
 
-=== Partnör-lidnad<ref>[http://www.odessa.ua/cooperation/partner_cities/ Odessan partnör-lidnad]</ref> ===
+=== Partnörlidnad<ref>[http://www.odessa.ua/cooperation/partner_cities/ Odessan partnör-lidnad]</ref> ===
 {| cellpadding="10"
 |- valign="top"
 |
