--- a/Odess.mw
+++ b/Odess.mw
@@ -35,7 +35,7 @@ Edel vl. 1795 lidn nimitihe '''Kacübijv''', möhemba — '''Hadžibei'''<ref>[h
 * {{EGY|#}} [[Aleksandrii]], [[Egipt]], 1968
 * {{USA|#}} [[Baltimor]], [[AÜV]], 1975
 * {{CHN|#}} [[Cindao]], [[Kitai]], 1993
-* {{ARM|#}} [[Erevan]], [[Armenii]], 1995
+* {{ARM|#}} [[Jerevan]], [[Armenii]], 1995
 * {{ITA|#}} [[Genui]], [[Italii]], 1972
 * {{ISR|#}} [[Haif]], [[Izrail']], 1992
 * {{JAP|#}} [[Jokoham]], [[Japonii]], 1965
