--- a/Omeghein.mw
+++ b/Omeghein.mw
@@ -1,4 +1,4 @@
-[[Fail:Conium maculatum (5062188867).jpg|thumb|right|285px|Omeghein]]
+[[Fail:Conium maculatum Cresswell 01.jpg|thumb|right|285px|Omeghein]]
 '''Omeghein''' ([[Latinan kel'|lat.]] ''Conium maculatum'') om [[Kaks'voččed kazmused|kaks'vozne]] [[Heinäsižed kazmused|heinäsine]] kazmuz.
 
 {{stub}}
