Партитив / аккузатив - путаная тема... до сих пор не совсем понимаю

--- a/Kazmused.mw
+++ b/Kazmused.mw
@@ -1,11 +1,11 @@
 {{1000}}
 [[Fail:Diversity_of_plants_image_version_3.png|pisi|300px|Kazmused]]
 '''Kazmused''' ({{kel’+la|''Plantae''}} vai {{kel’+la|''Vegetabilia''}}) — üks' äistajižiden organizmiden gruppišpäi, kudambha mülüdas [[samlod]], [[sänijaugad]], [[kortehed]],
-[[derägad]], [[alastoisemnižed]] da [[änikkazmused]]. Kazmusikš lugedas erasti [[šoll'od]]. 
+[[derägad]], [[alastoisemnižed]] da [[änikkazmused]]. Kazmusikš lugedas erasti [[šoll'oid]]. 
 
-Kazmused oma ezitadud äjil [[Kazmusiden elonformad|elonformil]] — ozutesikš, [[Pu|puil]], [[Penzaz|penshil]], [[Heinäsine kazmuz|heinil]] i m. e.
+Kazmused oma ezitadud äjil [[Kazmusiden elonformad|elonformil]] — ozutesikš, [[Pu|puil]], [[Penzaz|penzhil]], [[Heinäsine kazmuz|heinil]] i m. e.
 
-Kazmused tedoidab [[botanik]].
+Kazmusid tedoidab [[botanik]].
 
 == Kazmusiden ühthine klassifikacii ==
 
