--- a/Savičeva_Julija.mw
+++ b/Savičeva_Julija.mw
@@ -7,6 +7,9 @@ Vl 2004 hän ezini "[[Evrovizii]]"-konkursal, kus pajati "[[Believe Me]]"-pajon.
 * ''Магнит'' (2006)
 * ''Оригами'' (2008)
 * ''Первая любовь'' (2009)
+
+{{commonscat|Yulia Savicheva}}
+
 {{stub}}
 
 [[Kategorii:Pajatajad kirjamišton mödhe]]
