*Empty MediaWiki Message*

--- a/Veneh.mw
+++ b/Veneh.mw
@@ -2,6 +2,8 @@
 [[Fail:Halfgezonkenboot.JPG|thumb|right|285px|Veneh]]
 '''Veneh''' om pen' [[laiv]].
 
+== Kacu mugažo ==
+* [[Kater]]
 {{stub}}
 
 [[Kategorii:Venehed|*]]
