*Empty MediaWiki Message*

--- a/Kater.mw
+++ b/Kater.mw
@@ -1,4 +1,4 @@
-[[Fail:Neuharlingersiel-am Hafen - 17.07.07.JPG|thumb|right|250px|Likutimvenehed üksiš [[Saksanma|saksalaižiš]] [[port]]oišpäi]]
+[[Fail:Neuharlingersiel-am Hafen - 17.07.07.JPG|thumb|right|250px|Likutimvenehed ühtes [[Saksanma|saksalaižiš]] [[port]]oišpäi]]
 '''Likutimveneh''', vai '''kater''' ([[venäkel'|ven.]]: ''катер'') om [[veneh]]iden da [[laiv]]oiden ühtnine nimi, kudambad om [[likutim]] kut vägimašin {{k|силовую установку}}<!-- (erind — [[likutimveneh]], sikš ku likutimveneh ei ole stacionarine transport)-->.
 
 == Tipad ==
