--- a/Kater.mw
+++ b/Kater.mw
@@ -1,5 +1,5 @@
-[[Fail:Neuharlingersiel-am Hafen - 17.07.07.JPG|thumb|right|250px|Likutimvenehed ühtes [[Saksanma|saksalaižiš]] [[port]]oišpäi]]
-'''Likutimveneh''', vai '''kater''' ([[venäkel'|ven.]]: ''катер'') om [[veneh]]iden da [[laiv]]oiden ühtnine nimi, kudambad om [[likutim]] kut vägimašin {{k|силовую установку}}<!-- (erind — [[likutimveneh]], sikš ku likutimveneh ei ole stacionarine transport)-->.
+[[Fail:Neuharlingersiel-am Hafen - 17.07.07.JPG|thumb|right|250px|Katerad ühtes [[Saksanma|saksalaižiš]] [[port]]oišpäi]]
+'''Kater''' ([[venäkel'|ven.]]: ''катер''), vai '''likutimveneh''' (miše ei tobmalaze oikti) om [[veneh]]iden da [[laiv]]oiden ühtnine nimi, kudambad om [[likutim]] kut vägimašin {{k|силовую установку}} (erind — [[likutimveneh]], sikš ku kater ei ole stacionarine transport).
 
 == Tipad ==
 * [[Sodakater]]
@@ -10,6 +10,7 @@
 * [[Glisser]]
 
 == Kacu mugažo ==
+* [[Likutimveneh]]
 * [[Akvabaik]]
 * [[Veneh]]
 {{stub}}
