*Empty MediaWiki Message*

--- a/Likutimveneh.mw
+++ b/Likutimveneh.mw
@@ -1,1 +1,10 @@
-#suuna [[Kater]]
+[[Fail:22 ft Spencer Runabout.jpg|thumb|right|250px|Tipine likutimveneh]]
+'''Likutimveneh''' (vai '''motorveneh''') om [[veneh]]en tip; [[alamäraine laiv]], kudambas om [[likutim]]. Sen likutim om stacionaritoi — i ''nece om päerinend [[kater]]aspäi''.
+
+Sättutoitab transportižiden, ižanduz-, [[turizm|turistižiden]], bobuštuz-, [[sport]]ižiden da toižiden metoiden täht.
+{{stub}}
+
+[[Kategorii:Venehed]]
+[[Kategorii:Vedetransport]]
+
+[[ru:Моторная лодка]]
