--- a/Sport.mw
+++ b/Sport.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Pielesz, Shipilova, Davidenko.jpg|thumb|right|300px|[[Gandbol]]an matč [[Venäman gandbolan čempionat naižiden keskes|naižiden keskes]]]]
-'''Sport''' ([[Anglijan kel'|angl.]] ''sport'', lühetud form [[Amuižfrancine kel'|amuižfranc. kelespäi]] ''desport'' — vänd, bobuštuz) om [[ristit]]uiden radmine, kudamb om organizuitud märhapandud ohjandimiden mödhe. Sen met om ristituiden fizižiden vai [[intellekt]]ualižiden mahtusiden rindatuses, vaumičend necile radmižele i [[ristituidenkeskeižed pidandad]], kudambad tegese sen processas.
+'''Sport''' ([[Anglijan kel'|angl.]] ''sport'', lühetud form [[Amuižfrancijan kel'|amuižfranc. kelespäi]] ''desport'' — vänd, bobuštuz) om [[ristit]]uiden radmine, kudamb om organizuitud märhapandud ohjandimiden mödhe. Sen met om ristituiden fizižiden vai [[intellekt]]ualižiden mahtusiden rindatuses, vaumičend necile radmižele i [[ristituidenkeskeižed pidandad]], kudambad tegese sen processas.
 
 {{stub}}
 
