*Empty MediaWiki Message*

--- a/Forsaž_(fil'mserii).mw
+++ b/Forsaž_(fil'mserii).mw
@@ -10,6 +10,7 @@ Om pästtud 6 fil'mad vlspäi [[2001]] vhesai [[2013]]. Režissörad oma [[Koen 
 # ''[[Forsaž 4]]'' (2009)
 # ''[[Forsaž 5]]'' (2011)
 # ''[[Forsaž 6]]'' (2013)
+# ''[[Forsaž 7]]'' (2014)
 {{stub}}
 {{Forsaž}}
 
