--- a/Daugavpils.mw
+++ b/Daugavpils.mw
@@ -2,7 +2,7 @@
 |-
 |colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Daugavpils'''
 |-
-| align="center" | [[Fail:Coat of arms of Daugavpils.png|100px]]
+| align="center" | [[Fail:Coat of arms of Daugavpils.svg|100px]]
 | align="center" | [[Fail:Flag of Daugavpils.svg|125px|border]]
 |-
 | align="center" | Znam
