--- a/Likutimveneh.mw
+++ b/Likutimveneh.mw
@@ -1,7 +1,7 @@
 [[Fail:22 ft Spencer Runabout.jpg|thumb|right|250px|Tipine likutimveneh]]
-'''Likutimveneh''' (vai '''motorveneh''') om [[veneh]]en tip; [[alamäraine laiv]], kudambas om [[likutim]]. Sen likutim om stacionaritoi — i ''nece om päerinend [[kater]]aspäi''.
+'''Likutimveneh''' (vai '''motorveneh''') om [[veneh]]en tip; [[alamäraine laiv]], kudambas om [[likutim]]. Sen likutim en ole stacionarine — i ''nece om päerinend [[kater]]aspäi''.
 
-Sättutoitab transportižiden, ižanduz-, [[turizm|turistižiden]], bobuštuz-, [[sport]]ižiden da toižiden metoiden täht.
+Sättutoitase transportižiden, ižanduz-, [[turizm|turistižiden]], bobuštuz-, [[sport]]ižiden da toižiden metoiden täht.
 {{stub}}
 
 [[Kategorii:Venehed]]
