*Empty MediaWiki Message*

--- a/Likutimveneh.mw
+++ b/Likutimveneh.mw
@@ -1,5 +1,5 @@
 [[Fail:22 ft Spencer Runabout.jpg|thumb|right|250px|Tipine likutimveneh]]
-'''Likutimveneh''' (vai '''motorveneh''') om [[veneh]]en tip; [[alamäraine laiv]], kudambas om [[likutim]]. Sen likutim en ole stacionarine — i ''nece om päerinend [[kater]]aspäi''.
+'''Likutimveneh''' (vai '''motorveneh''') om [[veneh]]en tip; [[alamäraine laiv]], kudambas om [[likutim]]. Sen likutim ei ole stacionarine — i ''nece om päerinend [[kater]]aspäi''.
 
 Sättutoitase transportižiden, ižanduz-, [[turizm|turistižiden]], bobuštuz-, [[sport]]ižiden da toižiden metoiden täht.
 {{stub}}
