*Empty MediaWiki Message*

--- a/Mustmägi.mw
+++ b/Mustmägi.mw
@@ -7,13 +7,13 @@
 | align="center" width="140px" | [[Fail:Flag of Montenegro.svg|150px]]
 | align="center" width="140px" | [[Fail:Coat of arms of Montenegro.svg|150px]]
 |-
-| align="center" width="140px" | Montenegron valdkundflag
-| align="center" width="140px" | Montenegron valdkundznam
+| align="center" width="140px" | Mustmägin valdkundflag
+| align="center" width="140px" | Mustmägin valdkundznam
 |}
 |-
 | align=center colspan=2 | [[Fail:Europe-Montenegro.svg|300px]]
 |}
-'''Mustmägi''' vai '''Montenegro''' (cern.: ''Црна Гора, Crna Gora'') om valdkund [[Evrop]]as.
+'''Mustmägi''' vai '''Montenegro''' (mustm.: ''Црна Гора, Crna Gora'') om valdkund [[Evrop]]as.
 
 Eläjiden lugu — 672 180</br>
 Pind — 13 812 km<sup>2</sup>.
