--- a/Vepsän_kel'.mw
+++ b/Vepsän_kel'.mw
@@ -15,7 +15,7 @@ Pagižijoiden tarkoiged lugu om tundmatoi.
 
 Vepsän keles om koume paginad: ''pohjoižvepsän'', ''keskvepsän'' da ''suvivepsän'' pagin. Pohjoižvepsän paginan pagižijad elädas [[Karjalan Tazovaldkund]]as; suvuvepsän paginan pagižijad - [[Leningradan agj]]as, a keskvepsän paginan pagižijad - [[Leningradan agj|Leningradan]] da [[Vologdan agj|Vologdan]] agjoiš. Erased paginad, kudambid oli fiksiruinuded kelentedomehed ende, koliba. Ozutesikš, ei ole jo [[Isajevon volost'|Isajevon volostin]] [[Vepsläižed|vepsläižid]], kudambiš oli kirjutanu suomalaine kelentedomez' J. Basil'jer XIX voz'sadas ičeze tös «Vepsäläiset Isajevan Voolostissa» (1890).
 
-== Vepsän kirjamišt ==
+== [[Vepsän kirjamišt]] ==
 
 Nügüd' kävutadas vepsän kelen latinalaine kirjamišt:
 
