*Empty MediaWiki Message*

--- a/Vepsän_kirjamišt.mw
+++ b/Vepsän_kirjamišt.mw
@@ -4,7 +4,7 @@
 
 === Nügüd'aigaline kirjamišt ===
 
-Nügüd'aigaižes vepsän kirjamištos oma [[28 (lugu)|kaks'kümne kahesa]] kirjamed, lugemata [[apostrof]]an.
+Nügüd'aigaižes vepsän kirjamištos oma [[28 (lugu)|kaks'kümne kahesa]] kirjamed, lugemata [[pehmituzznam]]an.
 
 {| style="font-family:Arial Unicode MS; font-size:1.4em; border-color:#000000; border-width:1px; border-style:solid; border-collapse:collapse; background-color:#F8F8EF"
 | style="width:3em; text-align:center; padding: 3px;" | [[A|A a]]
