*Empty MediaWiki Message*

--- a/Lapsiden_kaičendan_päiv.mw
+++ b/Lapsiden_kaičendan_päiv.mw
@@ -4,11 +4,9 @@
 == Kacu mugažo ==
 * [[Lapsiden kaičend]]
 * [[Afrikalaižiden lapsiden kaičendan päiv]]
-* [[Internacionaline lapsen päiv]]
+* '''[[Internacionaline lapsen päiv]]'''
 * [[Patronatkazvatuz]]
 {{stub}}
 
 [[Kategorii:Venäman praznikad]]
 [[Kategorii:Praznikad kirjamišton mödhe]]
-
-[[ru:Международный день защиты детей]]
