*Empty MediaWiki Message*

--- a/Lapsiden_kaičendan_päiv.mw
+++ b/Lapsiden_kaičendan_päiv.mw
@@ -1,4 +1,4 @@
-[[Fail:Stamp of USSR 2161.jpg|thumb|right|250px|Praznik[[počtmark]]]]
+[[Fail:Stamp of USSR 2161.jpg|thumb|right|250px|Nevondkundaline praznik[[počtmark]]]]
 '''Lapsiden kaičendan päiv''' ([[venäkel'|ven.]]: ''День защиты детей'') om [[Venäma]]n valdkundpraznik. Oigetas [[1. kezaku|kezakun 1. päiväl]]; oli oigetud vl [[1949]].
 
 == Kacu mugažo ==
