--- a/Vepsän_mifologii.mw
+++ b/Vepsän_mifologii.mw
@@ -2,7 +2,7 @@
 
 [[Vepsläižed|Vepsän rahvahan]] [[hristanuskond|hristanuskonedeline]] uskondad voib harakterizuida kut [[animizm|animistine]]. Eskai jäl'ges hristanuskondan ottundad [[14. voz'sada]]s vepläižed varaziba uskondan [[rahkoid|rahkoiš]], hot' i ühtištoitud heid hristanižiden kanoidenke.
 
-Päjumal — [[Jumou]] — [[jumalanjuru]]n, [[jumalansä]]n da toižiden longuseližiden nägusiden jumal. Edelespäi vepsläižed lugiba händast [[Il'ja-endustai|Il'ja-endustajaks]], a hänen nimi, faktižiks, linni ''jumalan'' nimeks.
+Päjumal — [[Jumou]] — [[jumalanjuru]]n, [[jumalansä]]n da toižiden longuseližiden nägusiden jumal. Edelespäi vepsläižed lugiba händast [[Il'ja-endustai|Il'ja-endustajaks]], a hänen nimi, faktižiks, linni ''[[jumal]]an'' nimeks.
 
 Hot' äjad vepsläižed mändas jumalankodihe, migo järedas žilos vai küläs om ičeze noidak.
 {{stub}}
