*Empty MediaWiki Message*

--- a/Catch_the_Catch.mw
+++ b/Catch_the_Catch.mw
@@ -7,7 +7,7 @@
 # ''[[One Night's Not Enough]]'' (3:22)
 # ''[[Strangers by Night]]'' (5:42)
 # ''Stay'' (5:47)
-# ''Jump In My Car'' (4:36)
+# ''[[Jump In My Car]]'' (4:36)
 # ''You Can Be My Lucky Star Tonight'' (5:19)
 {{stub}}
 {{C. C. Catch}}
