ročin kel'; eläjiden lugu

--- a/Priozersk.mw
+++ b/Priozersk.mw
@@ -13,9 +13,9 @@
  | Telefonkod = +7-81379
  | Aigvö = [[UTC]]+4
 }}
-'''Priozersk''' ([[Venäkel'|ven.]] ''Приозерск'', [[Karjalan kel'|karj.]] ''Kägöisalmi'', [[Suomen kel'|suom.]] ''Käkisalmi'', [[Ročin kel'|suom.]] ''Kexholm'') om lidn [[Leningradan agj]]as, [[Priozerskan rajon]]an administrativine keskuz.
+'''Priozersk''' ([[Venäkel'|ven.]] ''Приозерск'', [[Karjalan kel'|karj.]] ''Kägöisalmi'', [[Suomen kel'|suom.]] ''Käkisalmi'', [[Ročin kel'|roč.]] ''Kexholm'') om lidn [[Leningradan agj]]as, [[Priozerskan rajon]]an administrativine keskuz.
 
-Eläjuden lugu — 18 929 ristitud (2010).
+Eläjiden lugu — 18 929 ristitud (2010).
 
 Sijadase [[Karjalan kaglaz|Karjalan kaglhal]], [[Ladog]]anjärven i [[Vuoks (järv)|Vuoks]]-järven keskes. 145 km [[Piter]]išpäi.
 [[Fail:Kexholm.jpg|thumb|250px|left|[[Korela (lidnuz)|Korela]]-lidnuz Priozerskas]]
