*Empty MediaWiki Message*

--- a/YouTube.mw
+++ b/YouTube.mw
@@ -1,5 +1,5 @@
 [[Fail:LogoYoutube2011.svg|thumb|right|225px|YouTube:an logotip]]
-'''YouTube''' (lugese ''jutjub'') om populärine [[vodeohosting]]an sait.
+'''YouTube''' (lugese ''jutjub'') om populärine [[videohosting]]an sait.
 
 Kävutajad voidas kacta [[video]] saital vai panda ičeze videorolikad sinnä.
 
