--- a/Virrat.mw
+++ b/Virrat.mw
@@ -11,13 +11,13 @@
  | Fail = Herraskosken kanava9.jpg
  | Pämez' = Vesa Haapamäki
  | Telefonkod = 
- | Aigvö = [[UTC]]+3
+ | Aigvö = [[UTC]]+2
 }}
 '''Virrat''' ([[suomen kel'|suom.]]: ''Virrat'', [[ročin kel'|roč.]]: ''Virdois'') om lidn [[Suomenma]]s, [[Pirkanma]]s.
 
 Virratan eläjiden lugu om läz 7,500 ristitud (2011). Pind om 1299 km². Rahvahantiheduz om 6,45 m./km².
 
-Lidnan pämez' om Vesa Haapamäki.
+Lidnan pämez' om Tapani Leppänen.
 {{stub}}
 
 [[Kategorii:Suomenman lidnad]]
