*Empty MediaWiki Message*

--- a/Virrat.mw
+++ b/Virrat.mw
@@ -9,7 +9,7 @@
  | Voz' = 2011
  | Pind = 1299
  | Fail = Herraskosken kanava9.jpg
- | Pämez' = Vesa Haapamäki
+ | Pämez' = Tapani Leppänen
  | Telefonkod = 
  | Aigvö = [[UTC]]+2
 }}
