*Empty MediaWiki Message*

--- a/7-Zip.mw
+++ b/7-Zip.mw
@@ -1,6 +1,6 @@
 [[Fail:7ziplogo.svg|thumb|right|100px|7-Zip:an logotip]]
 [[Fail:7-Zip.png|thumb|right|7-Zip:an skrinšot]]
-'''7-Zip''' om ahtištim.
+'''7-Zip''' om [[ahtištim]].
 
 Sen tegii — venälaine programmist [[Pavlov Igor'|Igor' Pavlov]].
 
