*Empty MediaWiki Message*

--- a/Vintaž.mw
+++ b/Vintaž.mw
@@ -1,4 +1,4 @@
-'''Vintaž''' om stilizirui čuraduz [[Mod|modas]]. Sen pämeletuz - eläbzdoitta enččed modan čuradused.
+'''Vintaž''' om stilizirui čuraduz [[Mod (čomamaht)|modas]]. Sen pämeletuz - eläbzdoitta enččed modan čuradused.
 
 Modas vai dizainas ''vintaž''-termin znamoičeb enččen epohan originaližed modižed kalud. 
 
