*Empty MediaWiki Message*

--- a/Jump_In_My_Car.mw
+++ b/Jump_In_My_Car.mw
@@ -1,4 +1,4 @@
-'''«Jump In My Car»''' (''Ištu minun mašinale'') om Secret Star:an pajo da hänen ühtennimine singl [[Bolen Diter|Diteran Bolenan]] avtorusel. Pajon tekst om [[anglijan kel'|anglijan kelel]].
+'''«Jump In My Car»''' (''Ištte minun mašinha'') om Secret Star:an pajo da hänen ühtennimine singl [[Bolen Diter|Diteran Bolenan]] avtorusel. Pajon tekst om [[anglijan kel'|anglijan kelel]].
 
 Pajo oli sädud Bolenalpäi Secret Star:ale (todesine nimi — Sabine Lürenbaum) da [[C. C. Catch]]:ale (edestajad oli tundud ühthižtön «Optimal»-muzikgruppas tagapäi). Secret Star:an singl (se linni hänen debütižeks soližeks radoks) om pästtud [[1986]]-žen voden keväz'kul. Päliči kus, [[28. sulaku|sulakun 28. päiväl]], pajo om pästtud C. C. Catch:an «[[Catch the Catch]]»-al'bomal. Arni toine versii, hot' ei olend pästtud kut singl, linni enamb populärižeks. Mugažo nece pajonversii oli populärine [[NSTÜ]]:s.
 
