--- a/Ezmäine_radio.mw
+++ b/Ezmäine_radio.mw
@@ -1,5 +1,5 @@
 [[Fail:Pervoeradio.png|thumb|right|250px|Radiostancijan logotip]]
-'''Ezmäine radio''' ([[venäkel'|ven.]]: ''Первое радио'') om [[Krasnodar]]an radiostancii. Radioverk katab läz 95% [[Krasnodaran rand]]an territorii.
+'''Ezmäine radio''' ([[venäkel'|ven.]]: ''Первое радио'') om [[Krasnodar]]an radiostancii. Radioverk katab läz 95% [[Krasnodaran rand]]an territorijad.
 {{stub}}
 
 [[Kategorii:Krasnodar]]
