*Empty MediaWiki Message*

--- a/Čomuz.mw
+++ b/Čomuz.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Sleepy Bay Sunrise.jpg|thumb|right|300px|[[Freisine (pol'sar', Tasmanii)|Freisine]]-pol'saren peizaž ([[Tasmanii]]-sar', [[Avstralii (valdkund)|Avstralii]])]]
-'''Čomuz''' om [[estetik|estetine]], praktitoi kategorii, kudamb znamoičeb vigatomuz, [[objekt]]an aspektoiden [[garmonii]]; i nece objekt (vai näguz) ajab hengidusen mujandad kaclijanno. Se om üks' [[kul'tur]]an päkategorijišpäi.
+'''Čomuz''' om [[estetik|estetine]], praktitoi kategorii, kudamb znamoičeb vigatomust, [[objekt]]an aspektoiden [[garmonii|garmonijad]]; i nece objekt (vai näguz) ajab hengidusen mujandadan kaclijal. Se om üks' [[kul'tur]]an päkategorijišpäi.
 
 == Kacu mugažo ==
 * '''[[Čomakulu]]''' / [[kamedindaline]]
