*Empty MediaWiki Message*

--- a/Ditrih_Marlen.mw
+++ b/Ditrih_Marlen.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Marlene Dietrich in No Highway (1951) (Cropped).png|thumb|right|245px|Marlen Ditrih vl 1950]]
-'''Marlen Ditrih''' ([[Germanijan kel'|germ.]] ''Marlene Dietrich'', todesine nimi — '''Marija Magdalena Ditrih''' ([[Germanijan kel'|germ.]] ''Marie Magdalene Dietrich''; [[27. tal'vku]] [[1901]] — [[6. semendku]] [[1992]]) oli [[Germanii|germanijalaine]] i [[Amerikan Ühtenzoittud Valdkundad|amerikalaine]] aktör i pajatai.
+'''Marlen Ditrih''' ([[Germanijan kel'|germ.]] ''Marlene Dietrich'', todesine nimi — '''Marija Magdalena Ditrih''' ([[Germanijan kel'|germ.]] ''Marie Magdalene Dietrich''); [[27. tal'vku]] [[1901]], [[Šöneberg]] ([[Berlin]]), [[Germanii]] — [[6. semendku]] [[1992]], [[Pariž]], [[Francii]]) oli [[Germanii|germanijalaine]] i [[Amerikan Ühtenzoittud Valdkundad|amerikalaine]] aktör i pajatai.
 
 {{stub}}
 
