*Empty MediaWiki Message*

--- a/Midnight_Hour.mw
+++ b/Midnight_Hour.mw
@@ -1,4 +1,4 @@
-'''«Midnight Hour»''' (''Pol'ö'') om [[C. C. Catch]]:an pajo da ühtinnimine singl «[[Hear What I Say]]»-al'bomas, kudamb om pästtud [[1989]]-žes vodes.
+'''«Midnight Hour»''' (''Südäiö'') om [[C. C. Catch]]:an pajo da ühtinnimine singl «[[Hear What I Say]]»-al'bomas, kudamb om pästtud [[1989]]-žes vodes.
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
