*Empty MediaWiki Message*

--- a/Black_Rebel_Motorcycle_Club.mw
+++ b/Black_Rebel_Motorcycle_Club.mw
@@ -1,6 +1,41 @@
+{{Muzikgrupp
+ | Nimi = Black Rebel Motorcycle Club (BRMC)
+ | Logo = 
+ | Foto = Black Rebel Motorcycle Club @ Metropolis Fremantle (3 8 2010) (4879058860).jpg
+ | Žanrad = [[al'ternativine rok]], [[indirok]], [[noizrok]], [[psihodelikrok]]
+ | Voded = 1998—...
+ | Valdkund = AÜV
+ | Lidn = Los Andželes
+ | Kel' = [[anglijan kel'|anglijan]]
+ | Leiblad = Abstract Dragon, Vagrant, Co-Op, RCA / BMG, Island, Echo, Virgin
+ | Toižed projektad = 
+ | Mülükund = Piter Heis, Robert Levon Bin, Lea Šapiro
+ | Eksühtnijad = Nik Džegou, Piter Selesberi, Maikl Keting
+ | Sait = http://www.blackrebelmotorcycleclub.com/
+}}
 '''«Black Rebel Motorcycle Club»''' ('''«BRMC»''') om [[AÜV|amerikalaine]] [[indirok|indi-]]/[[noizrok|noiz-]]/[[psihodelikrok]]grupp [[Los Andželes]]aspäi. Om olmas [[1998]]. vlpäi.
 
-Gruppas om koume ühtnijad: Piter Heis ([[än'|vokal]], ([[basgitar|bas]])[[gitar]], [[sintezator]]), Robert Levon Bin (vokal, gitar, basgitar, [[pianin]]), Leja Šapiro (barabanad).
+Gruppas om koume ühtnijad: Piter Heis ([[än'|vokal]], ([[basgitar|bas]])[[gitar]], [[sintezator]]), Robert Levon Bin (vokal, gitar, basgitar, [[pianin]]) da Lea Šapiro (barabanad).
 
 Mugoi muzikkollektivad, kut [[The Jesus and Mary Chain]], [[The Stone Roses]], [[My Bloody Valentine]] i [[Ride]] tegiba valatoituz «BRMC»:al.
+
+== Diskografii ==
+{{kacu|Black Rebel Motorcycle Club:an diskografii}}
+* ''[[B.R.M.C.]]'' (2001)
+* ''[[Take Them On, On Your Own]]'' (2003)
+* ''[[Howl]]'' (2005)
+* ''[[Baby 81]]'' (2007)
+* ''[[The Effects of 333]]'' (2008)
+* ''[[Beat the Devil's Tattoo]]'' (2010)
+* ''[[Specter At The Feast]]'' (2013)
+
+== Irdkosketused ==
+* [http://www.blackrebelmotorcycleclub.com/ Oficialine sait] {{ref-en}}
 {{stub}}
+
+[[Kategorii:Muzikgruppad kirjamišton mödhe]]
+[[Kategorii:AÜV:oiden muzikgruppad]]
+[[Kategorii:Indirokgruppad]]
+[[Kategorii:Noizrokgruppad]]
+[[Kategorii:Psihodelikrokgruppad]]
+[[Kategorii:Al'ternativižed rokgruppad]]
