*Empty MediaWiki Message*

--- a/Black_Rebel_Motorcycle_Club.mw
+++ b/Black_Rebel_Motorcycle_Club.mw
@@ -17,7 +17,7 @@
 
 Gruppas om koume ühtnijad: Piter Heis ([[än'|vokal]], ([[basgitar|bas]])[[gitar]], [[sintezator]]), Robert Levon Bin (vokal, gitar, basgitar, [[pianin]]) da Lea Šapiro (barabanad).
 
-Mugoi muzikkollektivad, kut [[The Jesus and Mary Chain]], [[The Stone Roses]], [[My Bloody Valentine]] i [[Ride]] tegiba valatoituz «BRMC»:al.
+Mugoižed muzikkollektivad, kut [[The Jesus and Mary Chain]], [[The Stone Roses]], [[My Bloody Valentine]] i [[Ride]] tegiba valatoitusen «BRMC»:ha.
 
 == Diskografii ==
 {{kacu|Black Rebel Motorcycle Club:an diskografii}}
