*Empty MediaWiki Message*

--- a/Baby_I_Need_Your_Love.mw
+++ b/Baby_I_Need_Your_Love.mw
@@ -1,4 +1,4 @@
-'''«Baby I Need Your Love»''' (''Raha, minule pidab sinun armastust'') om [[C. C. Catch]]:an pajo da ühtinnimine singl «[[Big Fun]]»-al'bomas, kudamb om pästtud [[1988]]-žes vodes.
+'''«Baby I Need Your Love»''' (''Raha, minei pidab sinun armastust'') om [[C. C. Catch]]:an pajo da ühtinnimine singl «[[Big Fun]]»-al'bomas, kudamb om pästtud [[1988]]-žes vodes.
 
 Pajon tekst om [[anglijan kel'|anglijan kelel]].
 {{stub}}
