*Empty MediaWiki Message*

--- a/Mir.mw
+++ b/Mir.mw
@@ -1,8 +1,8 @@
-'''Mir''' — fundamentaline termin [[astronomii|astronomijas]] da [[filosofii|filosofijas]], konkretižen märhapanendata. Ühtnižes hamas, Mir (vai '''Londuzkund''', mugažo — '''[[Mail'm]]''') om olmižen kaiken kund ümbri meiš, sidä kesken [[planet]]ad, [[tähtaz|tähthad]], [[galaktik]]ad; a mugažo kaiked [[materii (fizik)|materijad]] da [[energii]]. Pojavad terminad — [[kosmos]], mail'm, [[londuz]].
+'''Mir''' — fundamentaline termin [[astronomii|astronomijas]] da [[filosofii|filosofijas]], konkretižeta märhapanendata. Ühtnižes hamas, Mir (vai '''Londuzkund''', mugažo — '''[[Mail'm]]''') om olmižen kaiken kund ümbri meiš, sidä kesken [[planet]]ad, [[tähtaz|tähthad]], [[galaktik]]ad; a mugažo kaiked [[materii (fizik)|materijad]] da [[energii]]. Pojavad terminad — [[kosmos]], mail'm, [[londuz]].
 
-«Mir»-tärtuses voib olda kaks' erazvuiččed hamad: ''spekulätivine'' da ''materialine''; materialine Mir kuctas '''astronomižeks Miraks''' (vai, harvemba, '''[[Metagalaktik]]aks''').
+«Mir»-tärtuses voib olda kaks' erazvuittušt hamad: ''spekulätivine'' da ''materialine''; materiališt Mirud kuctas '''astronomižeks Miruks''' (vai, harvemba, '''[[Metagalaktik]]aks''').
 
-Erasišti lugedas, miše om olmas ''kuverz'-se'' Mirad (m. k. leveduzpirdaižed mail'mad), nece gipotetine miroiden kund kuctas '''[[Mul'timir]]aks'''.
+Erasišti lugedas, miše om olmas ''kuverz'-se'' Mirud (m. k. leveduzpirdaižed mail'mad), nece gipotetišt miruiden kundad kuctas '''[[Mul'timir]]uks'''.
 [[Fail:Иерархия масштабов во Вселенной.png|border|center|1200px]]
 {{stub}}
 
