*Empty MediaWiki Message*

--- a/Džezv.mw
+++ b/Džezv.mw
@@ -1,5 +1,5 @@
 [[Fail:Bakır cezve.JPG|thumb|right|275px|Džezv]]
-'''Džezv''' vai '''turk''' ([[Turkan kel'|turk.]] ''cezve'', [[Venäkel'|ven.]] ''турка'') om astii [[kofe]]n keitandale [[Kofe päivnouzmaižen ladun mödhe|päivnouzmaižen ladun]] mödhe.
+'''Džezv''' vai '''turk''' ([[Turkan kel'|turk.]] ''cezve'', [[Venäkel'|ven.]] ''турка'') om astii [[kofe]]n keitandale [[Kofe päivnouzmaižen ladun mödhe|päivnouzmaižen ladun]] mödhe (turkalaižen ladun mödhe).
 
 {{stub}}
 
