*Empty MediaWiki Message*

--- a/Kofe.mw
+++ b/Kofe.mw
@@ -1,11 +1,11 @@
 {{1000}}
 [[Fail:A small cup of coffee.JPG|thumb|250px|Čašk kofed]]
-'''Kofe''' om populärine jom, kudamb tegese räkištadud kofejüvišpäi.
+'''Kofe''' om populärine [[jom]], kudamb tegese räkištadud [[kofejüvä|kofejüvišpäi]].
 
 == Irdkosketused ==
 * [http://cupworld.org/ Kaik kofen polhe] (Venäkelel)
 * [http://www.kaffein.ru/ Kofen sortad, melentartuižed faktad da informacii] (Venäkelel)
-
 {{Stub}}
 
 [[Kategorii:Jomad]]
+[[Kategorii:Kofe|*]]
