--- a/C._C._Catch:an_diskografii.mw
+++ b/C._C._Catch:an_diskografii.mw
@@ -22,7 +22,7 @@ Se om täuz' '''[[C. C. Catch]]-kollektivan diskografii'''.
 # '''[[Diamonds|Diamonds — Her Greatest Hits]]''' — 16. kevaz'ku 1988
 # '''Strangers by Night''' — 1988
 # '''C.C. Catch: Super 20''' — 1989
-# '''Classics''' — 1989
+# '''[[Classics]]''' — 1989
 # '''Super Disco Hits''' — 1989
 # '''The Decade Remixes''' — 1990
 # '''Backseat of Your Cadillac''' — 1991
