*Empty MediaWiki Message*

--- a/The_Golden_Years.mw
+++ b/The_Golden_Years.mw
@@ -13,7 +13,7 @@
 # ''[[Keep Love Alive]]'' (3:26)
 # ''With a Little Love'' (3:33)
 # ''[[Just We Two (Mona Lisa)]]'' (3:58)
-# ''One In a Million'' (3:31)
+# ''[[One In a Million]]'' (3:31)
 # ''[[Cheri, Cheri Lady]] (Special Dance Version)'' (4:52)
 
 === 2. disk ===
