*Empty MediaWiki Message*

--- a/25_Years_of_Disco-Pop.mw
+++ b/25_Years_of_Disco-Pop.mw
@@ -13,7 +13,7 @@
 # ''[[Just We Two (Mona Lisa)]]'' (3:54)
 # ''[[Atlantis Is Calling (S.O.S. for Love)]]'' (3:48)
 # ''Sweet Little Sheila'' (3:04)
-# ''One In a Million'' (3:41)
+# ''[[One In a Million]]'' (3:41)
 # ''[[Give Me Peace on Earth]]'' (4:12)
 # ''[[Keep Love Alive]] (Long Vocal Mix)'' (3:25)
 # ''In 100 Years... (Long Version Future Mix)'' (6:39)
