*Empty MediaWiki Message*

--- a/We_Still_Have_Dreams_—_The_Greatest_Love_Ballads_of_Modern_Talking.mw
+++ b/We_Still_Have_Dreams_—_The_Greatest_Love_Ballads_of_Modern_Talking.mw
@@ -5,7 +5,7 @@
 # ''[[Keep Love Alive]]'' (3:25)
 # ''[[Give Me Peace on Earth]]'' (4:12)
 # ''Blinded By Your Love'' (4:00)
-# ''One In a Million'' (3:41)
+# ''[[One In a Million]]'' (3:41)
 # ''Wild Wild Water'' (4:17)
 # ''Don't Let It Get You Down'' (3:40)
 # ''Like A Hero'' (3:40)
