*Empty MediaWiki Message*

--- a/Mail'man_valdkundad.mw
+++ b/Mail'man_valdkundad.mw
@@ -63,7 +63,7 @@
 |-
 | <CENTER>'''29'''</CENTER> || <CENTER>[[Fail:Flag_of_Burundi.svg|100px]]</CENTER> || <CENTER>[[Burundi]]</CENTER> || <CENTER>[[Bužumbur]]</CENTER>
 |-
-| <CENTER>'''30'''</CENTER> || <CENTER>[[Fail:Flag_of_Bhutan.svg|100px]]</CENTER> || <CENTER>[[Butan]]</CENTER> || <CENTER>[[Thimphu]]</CENTER>
+| <CENTER>'''30'''</CENTER> || <CENTER>[[Fail:Flag_of_Bhutan.svg|100px]]</CENTER> || <CENTER>[[Butan (valdkund)|Butan]]</CENTER> || <CENTER>[[Thimphu]]</CENTER>
 |-
 | <CENTER>'''31'''</CENTER> || <CENTER>[[Fail:Flag_of_Chad.svg|100px]]</CENTER> || <CENTER>[[Čad]]</CENTER> || <CENTER>[[Ndžamen]]</CENTER>
 |-
