Я бы так написала. Ну или всё равно без конечной "а".

--- a/Mail'man_valdkundad.mw
+++ b/Mail'man_valdkundad.mw
@@ -343,7 +343,7 @@
 |-
 | <CENTER>'''169'''</CENTER> || <CENTER>[[Fail:Flag_of_Swaziland.svg|100px]]</CENTER> || <CENTER>[[Svazilend]]</CENTER> || <CENTER>[[Mbabane]]</CENTER>
 |-
-| <CENTER>'''170'''</CENTER> || <CENTER>[[Fail:Flag_of_Sri_Lanka.svg|100px]]</CENTER> || <CENTER>[[Šri Lanka]]</CENTER> || <CENTER>[[Šri Džajavardenepura Kotte]]</CENTER>
+| <CENTER>'''170'''</CENTER> || <CENTER>[[Fail:Flag_of_Sri_Lanka.svg|100px]]</CENTER> || <CENTER>[[Šrilank]]</CENTER> || <CENTER>[[Šri Džajavardenepura Kotte]]</CENTER>
 |-
 | <CENTER>'''171'''</CENTER> || <CENTER>[[Fail:Flag_of_Switzerland.svg|100px]]</CENTER> || <CENTER>[[Šveicarii]]</CENTER> || <CENTER>[[Bern]]</CENTER>
 |-
