*Empty MediaWiki Message*

--- a/Violine.mw
+++ b/Violine.mw
@@ -1,9 +1,9 @@
 {{1000}}
 [[Fail:Range violin.png|left|150px]]
 [[Fail:Stainer.jpg|thumb|right|250px|Tipine skripk (165?-žen vlpäi)]]
-'''Skripk''' om populärine kaiked mail'madme [[jändesoit]]. Se vändi znamasine rol' [[evrop]]alaižele kul'turale.
+'''Skripk''' om populärine kaiked mail'madme [[jändesoit]]. Se vändi znamasižen rolin [[evrop]]alaižele kul'turale.
 
-Om rahvahaline augotižlibund. Skripk om nell' (harvašti viž) [[jände (muzik)|jäntked]] — muzikant (skripkanmez') soitab niiden päl [[smučk]]an abul.
+Necil soital om rahvahaline augotižlibund. Skripkal om nell' (harvašti viž) [[jände (muzik)|jändet]] — muzikant (skripkanmez') soitab niiden päl [[smučk]]an abul.
 {{stub}}
 
 [[Kategorii:Jändesoitud]]
