*Empty MediaWiki Message*

--- a/Violine.mw
+++ b/Violine.mw
@@ -3,9 +3,9 @@
 [[Fail:Stainer.jpg|thumb|right|250px|Tipine skripk (165?-žen vlpäi)]]
 '''Skripk''' om populärine kaiked mail'madme [[jändesoit]]. Se vändi znamasižen rolin [[evrop]]alaižele kul'turale.
 
-Necil soital om rahvahaline augotižlibund. Skripkal om nell' (harvašti viž) [[jände (muzik)|jändet]] — muzikant (skripkanmez') soitab niiden päl [[smučk]]an abul.
+Necil soitol om rahvahaline augotižlibund. Skripkal om nell' (harvašti viž) [[jände (muzik)|jändet]] — muzikant (skripkanmez') soitab niiden päl [[smučk]]an abul.
 {{stub}}
 
 [[Kategorii:Jändesoitud]]
 [[Kategorii:Skripk|*]]
-[[Kategorii:Soitud kirjamišton mödhe]]
+[[Kategorii:Soitod kirjamišton mödhe]]
