--- a/Violine.mw
+++ b/Violine.mw
@@ -6,6 +6,6 @@
 Necil soitol om rahvahaline augotižlibund. Skripkal om nell' (harvašti viž) [[jände (muzik)|jändet]] — muzikant (skripkanmez') soitab niiden päl [[smučk]]an abul.
 {{stub}}
 
-[[Kategorii:Jändesoitud]]
+[[Kategorii:Jändesoitod]]
 [[Kategorii:Skripk|*]]
 [[Kategorii:Soitod kirjamišton mödhe]]
