*Empty MediaWiki Message*

--- a/Gitar.mw
+++ b/Gitar.mw
@@ -6,6 +6,6 @@
 Om kaks' pägitartipad — '''[[akustine gitar|akustižed]]''' da '''[[elektrine gitar|elektrogitarad]]''' (no om i toižed). Mugažo niid erinedas jäntkiden lugun, korpusan forman, diapazonan, augotižlibundan (valdkundan hamas) mödhe da m. e.
 {{stub}}
 
-[[Kategorii:Jändesoitud]]
+[[Kategorii:Jändesoitod]]
 [[Kategorii:Gitar|*]]
-[[Kategorii:Soitud kirjamišton mödhe]]
+[[Kategorii:Soitod kirjamišton mödhe]]
