*Empty MediaWiki Message*

--- a/Sekator.mw
+++ b/Sekator.mw
@@ -1,6 +1,7 @@
-[[Fail:Secateur ouvert.jpg|thumb|right|215px|Sekator]]
+[[Fail:Secateur ouvert.jpg|thumb|right|235px|Sekator]]
 '''Sekator''' ([[Francijan kel'|franc.]] ''sécateur'') om sad[[raudad]] vezoiden da hoikiden barboiden čapandale.
 
 {{stub}}
 
 [[Kategorii:Maižanduzazeged]]
+[[Kategorii:Čapajad ladimed]]
