--- a/Jupiter.mw
+++ b/Jupiter.mw
@@ -4,7 +4,7 @@
 [[Fail:Jupiter symbol.svg|left|30px]]
 '''Jupiter''' om 5. planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as. Se om kaikiš suremb Päiväižen sisteman planet. Sen [[perigelii]] om 7,405736·10<sup>8</sup> km, a [[afelii]] om 8,165208·10<sup>8</sup> km. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 11,86 maižiš voziš.
 
-Jupiteranno om [[Jupiteran kaimdajad|67 kaimdajad]].
+Jupiteral om [[Jupiteran kaimdajad|67 kaimdajad]].
 {{stub}}
 
 [[Kategorii:Planetad]]
