--- a/Saturn.mw
+++ b/Saturn.mw
@@ -3,6 +3,8 @@
 {{tärtused|Saturn}}
 [[Fail:Saturn symbol.svg|left|30px]]
 '''Saturn''' om 6. planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as. Sen [[perigelii]] om 1 353 572 956 km, a [[afelii]] om 1 513 325 783 km. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 29,46 maižiš voziš.
+
+Saturnal om [[Saturnan kaimdajad|62 kaimdajad]].
 {{stub}}
 
 [[Kategorii:Planetad]]
