--- a/Neptun.mw
+++ b/Neptun.mw
@@ -3,6 +3,8 @@
 {{tärtused|Neptun}}
 [[Fail:Neptune symbol.svg|left|30px|]]
 '''Neptun''' om 8. planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as. Sen [[perigelii]] om 4 452 940 833 km, a [[afelii]] om 4 553 946 490 km. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 367,49 maižiš voziš.
+
+Neptunal om [[Neptunan kaimdajad|13 kaimdajad]].
 {{stub}}
 
 [[Kategorii:Planetad]]
