*Empty MediaWiki Message*

--- a/Uran_(planet).mw
+++ b/Uran_(planet).mw
@@ -4,4 +4,6 @@
 [[Fail:Uranus symbol.svg|left|30px|]]
 '''Uran''' om seičemenz' planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as. Sen [[perigelii]] om 2 748 938 461 km, a [[afelii]] om 3 004 419 704km. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 84,02 maižiš voziš.
 
+Uranal om [[Saturnan kaimdajad|27 kaimdajad]].
+
 [[Kategorii:Planetad]]
