--- a/Vener.mw
+++ b/Vener.mw
@@ -1,11 +1,11 @@
 {{1000}}
 [[Fail:Venus globe.jpg|thumb|right|250px|Vener]]
-[[Fail:Venus_symbol.svg|left|30px|]]
+[[Fail:Venus symbol.svg|left|30px]]
 '''Vener''' om toine planet [[Päiväine|Päiväižespäi]] lugeden [[Päiväižen sistem]]as, [[Ma (planet)|Maižen]] gruppan planet. Matk Veneraspäi Päiväižehesai om läz 108 208 000 kilometrad. Planet punose ümbri Päiväižes da tegeb kogonaižen punondan 224,7 maižiš päiviš. 
 
 Veneral oma vepsläižed nimed: '''''Ehttähthaine''''', '''''Homendeztähthäine''''' da '''''Zor'atähthaine'''''.
 
-Veneral ei ole londuseližid kaimdajoid; no om [[kvazikaimdai]] — [[2002 VE68|2002 VE<sub>68</sub>]], kudamb om lujas läheline planetannoks. Aigemba tedomehed kacui todesta [[Veneran kaimdajad|niiden olend]].
+Veneral ei ole londuseližid kaimdajoid; no om [[kvazikaimdai]] — [[2002 VE68|2002 VE<sub>68</sub>]]-asteroid, kudamb om lujas läheline planetannoks. Aigemba tedomehed kacui todesta [[Veneran kaimdajad|niiden olend]].
 {{stub}}
 
 [[Kategorii:Planetad]]
