/* Administrativiž-territorialine jagand */

--- a/Sur'_Britanii.mw
+++ b/Sur'_Britanii.mw
@@ -22,9 +22,8 @@ Pohjoižel da Päivlaskmal om mäged (Pohjoine Šotlandijan mägišt, Penninan d
 
 == Administrativiž-territorialine jagand ==
 Sures Britanijas om 4 administrativiž-territorialižed palad:
-
 * '''[[Anglii]]''', adm. keskuz om [[London]]
-* '''[[Vel's]]''', adm. keskuz om [[Kardiff]]
+* '''[[Uel's]]''', adm. keskuz om [[Kardiff]]
 * '''[[Šotlandii]]''', adm. keskuz om [[Edinburg]]
 * '''[[Pohjoine Irlandii]]''', adm. keskuz om [[Belfast]]
 
