/* Suren Britanijan rahvahid */

--- a/Sur'_Britanii.mw
+++ b/Sur'_Britanii.mw
@@ -67,7 +67,7 @@ Suren Britanijan eläjiden lugu (1900 - 2009)
 Jur’eläid - 92 %. (2001):	
 * [[anglijalaižed]] — 83,6 %,
 * [[šotlandijalaižed]] — 8,5 %,
-* [[vel'slaižed]] — 4,9 %,
+* [[uel'slaižed]] — 4,9 %,
 * [[irlandijalaižed]] — 2,9 %. 
 
 {{Evropa}}
