*Empty MediaWiki Message*

--- a/Plener.mw
+++ b/Plener.mw
@@ -1,5 +1,5 @@
 [[Fail:Sargent MonetPainting.jpg|thumb|right|275px|«[[Mone Klod|Klod Mone]] mecanröunanal», [[Džon Singer Sardžent|Sardžent Džon Singer]]]]
-'''Plener''' ([[Francijan kel'|franc.]] ''en plein air'' — «avoinudes il'mas») om objektoiden kuvadandan voimujupirdandan tehnik londuseližes lämoiš i londuseližiš arvoimižiš.
+'''Plener''' ([[Francijan kel'|franc.]] ''en plein air'' — «avoinudes il'mas») om objektoiden kuvadandan [[voimujupirdand]]an tehnik londuseližes lämoiš i londuseližiš arvoimižiš.
 
 {{stub}}
 
