--- a/Brother_Louie_'99.mw
+++ b/Brother_Louie_'99.mw
@@ -1,4 +1,4 @@
-'''«Brother Louie '99»''' (''Vell' Lui; 99. voz<nowiki>'</nowiki>'') om [[Modern Talking]]:an singl; pästtud [[1999]]-žel vodel, da vaiše [[Sur' Britanii|Suren Britanijas]].
+'''«Brother Louie '99»''' (''Vell' Lui; 99. voz<nowiki>'</nowiki>'') om [[Modern Talking]]:an singl; pästtud [[1999]]-žel vodel, da vaiše [[Sur' Britanii|Sures Britanijas]].
 
 Om «[[Brother Louie]]»-pajon uz' versii, kudamb om pästtud [[1986]]-žel vodel «[[Ready for Romance]]»-al'bomas.
 
