*Empty MediaWiki Message*

--- a/Modern_Talking:an_diskografii.mw
+++ b/Modern_Talking:an_diskografii.mw
@@ -102,7 +102,7 @@ Se om täuz' '''[[Modern Talking]]-kollektivan diskografii'''.
 # '''[[We Take the Chance]]''' — 1998
 # '''[[You Are Not Alone]]''' — 1. uhoku 1999
 # '''[[Sexy, Sexy Lover]]''' — 17. semendku 1999
-# '''[[Brother Louie '99]]''' — 1999 '''''(vaiše [[Sur' Britanii|Suren Britanijas]])'''''
+# '''[[Brother Louie '99]]''' — 1999 '''''(vaiše [[Sur' Britanii|Sures Britanijas]])'''''
 # '''[[China in Her Eyes]]''' — 31. viluku 2000
 # '''[[Don't Take Away My Heart]]''' — 2. semendku 2000
 # '''[[Win the Race]]''' — 26. uhoku 2001
