--- a/Šizofrenii.mw
+++ b/Šizofrenii.mw
@@ -1,10 +1,10 @@
-[[Fail:The Schizophrenic House.jpg|thumb|right|250px|[[Paranoidine šizofrenii|Paranoidižen šizofrenikan]] kodi]]
-[[Fail:Waldau-Wolfli.jpg|thumb|right|250px|Läžujan sädamine]]
+[[Fail:The Schizophrenic House.jpg|thumb|right|280px|[[Paranoidine šizofrenii|Paranoidižen šizofrenikan]] kodi]]
 '''Šizofrenii''' om jüged [[psihine palahtelend]]; [[meletamine|meletamižen]] processoiden i [[emocii|emocionaližiden]] reakcijoiden čihodamine.
 
 Harakterižed pirdad: [[gallücinacii|gallücinacijad]] (vizualižed {{k|зрительные}} vai kulemižed), paranoidine vai fantastine [[horind]], meletamižen i [[vasthaotmine|vasthaotmižen]] fundamentaližed palahtelendad, [[pagin]]an dezorganizacii, adekvatoi vai hond [[affekt]]; a mugažo [[socialine disfunkcii]] da tömahtutomuz.
 
 == Kacu mugažo ==
+[[Fail:Artistic view of how the world feels like with schizophrenia - journal.pmed.0020146.g001.jpg|thumb|left|250px|Läžujan avtoportret. Ka pacient nägeb ičein tervehtamižen process.]]
 * [[Šizotipine palahtelend]]
 * [[Demencii]]
 * [[Šizofazii]]
