*Empty MediaWiki Message*

--- a/St._Magdalene.mw
+++ b/St._Magdalene.mw
@@ -1,4 +1,4 @@
-[[Fail:Linlithgow - geograph.org.uk - 4429.jpg|thumb|right|250px|Enččed «St. Magdalene»-kompanijan sauvused. Nügüd' ned oma eländkodid, i om suren kul'turan znamoičendan.]]
+[[Fail:Linlithgow - geograph.org.uk - 4429.jpg|thumb|right|250px|Enččed «St. Magdalene»-kompanijan sauvused. Nügüd' ned oma eländkodid, i om sur' kul'turan znamoičend.]]
 '''«St. Magdalene»''' oli šotlandijalaižen [[viski]]n tegii [[Linlitgou]]späi ([[Šotlandii]], [[Sur' Britanii]]). Oli olmas vlpäi [[1798]] vhesai [[1983]].
 {{stub}}
 
