*Empty MediaWiki Message*

--- a/Hakaru_(kel').mw
+++ b/Hakaru_(kel').mw
@@ -1,5 +1,5 @@
 {{tärtused|Hakaru}}
-[[Fail:Jaqaru.png|thumb|right|250px|Aimar-kelen levigandusen kart]]
+[[Fail:Jaqaru.png|thumb|right|250px|Hakaru-kelen levigandusen kart]]
 '''Hakaru''' (vai '''tupinan aimar'''; ''haq'aru'') om üks' [[Suviamerikan indejan keled|suviamerikan indejan kelišpäi]], [[haki (kel'kanz)|haki (aimar)-kel'kanzaspäi]].
 
 Sil pagištas [[Peru]]s. Pagižijoiden lugu om 725 ristitud (2004; kut mamankelel).
