--- a/Kečuan_kel'.mw
+++ b/Kečuan_kel'.mw
@@ -1,6 +1,6 @@
 {{tärtused|Kečua}}
 [[Fail:Quechuan langs map.svg|pisi|Kečuan levigandusen kart]]
-'''Kečua''' (''runa simi'') om kaikiš suremb kel' [[Amerik|molembiš Amerikoiš]], [[kečua (rahvaz)|kečua]]-rahvahan kel'.
+'''Kečua''' (''runa simi'') om kaikiš suremb indejan kel' [[Amerik|molembiš Amerikoiš]], [[kečua (rahvaz)|kečua]]-rahvahan kel'.
 
 Om valdkundkel' [[Bolivii|Bolivijas]]; i üks' oficialižišpäi [[Peru]]s, [[Ekvador]]as da [[Kolumbii|Kolumbijas]]. Mugažo sil pagištas [[Argentin]]as da [[Čili]]š.
 
