*Empty MediaWiki Message*

--- a/Arkindeil.mw
+++ b/Arkindeil.mw
@@ -16,7 +16,7 @@
 [[Fail:St Bartholomews, Arkendale.jpg|thumb|left|250px|Ph. Bartolomejan jumalanpert' Arkindeilas]]
 '''Arkindeil''' ([[anglijan kel'|angl.]]: ''Arkendale'') om külä [[Sur' Britanii|Sures Britanijas]], [[Pohjoine Jorkšir]]-grafkundas.
 
-Lidnan eläjiden lugu oli 278 ristitud 2001-žes vodes.
+Külän eläjiden lugu oli 278 ristitud 2001-žes vodes.
 
 Arkindeilas om [[pab]], jumalanpert' da [[küläkundkodi]].
 {{stub}}
