--- a/Kuban'_(jogi).mw
+++ b/Kuban'_(jogi).mw
@@ -1,6 +1,6 @@
 {{tärtused|Kuban'}}
 [[Fail:Krasnodar Kuban.JPG|thumb|right|250px|Kuban' [[Krasnodar]]as]]
-'''Kuban'''' ([[venäkel'|ven.]]: ''Кубань'', [[amugrekan kel'|amugrek.]]: ''Ύπανις'', [[latinan kel'|lat.]]: ''Hypanis'', [[karačajan da balkaran kel'|kar. da balk.]]: ''Къобан'', [[abazinan kel'|abaz.]]: ''Къвбина'', [[adigan kel'|adig.]]: ''Псыж'', [[kabardinan da čerkessan kel'|kab. da čerk.]]: ''Псыжъ'') om jogi [[Venäma]]n suvis.
+'''Kuban'''' ([[venäkel'|ven.]]: ''Кубань'', [[amugrekan kel'|amugrek.]]: ''Ύπανις'', [[latinan kel'|lat.]]: ''Hypanis'', [[karačajan da balkaran kel'|kar. da balk.]]: ''Къобан'', [[abazinan kel'|abaz.]]: ''Къвбина'', [[adigan kel'|adig.]]: ''Псыж'', [[kabardinan da čerkessan kel'|kab. da čerk.]]: ''Псыжъ'') om jogi [[Venäma]]n suves.
 
 Jogen piduz om 870 km, basseinan pind om 57,900 km².
 {{stub}}
