*Empty MediaWiki Message*

--- a/Suvi.mw
+++ b/Suvi.mw
@@ -1,4 +1,4 @@
 [[Fail:Kompass de S.png|thumb|Suvipol' om sinižel mujul]]
-'''Suvi''' (S) om [[manpoled|manpol']], kudamban azimut om 180 gradusad. [[Päiväine]] om suvis keskpäivän.
+'''Suvi''' (S) om [[manpoled|manpol']], kudamban azimut om 180 gradusad. [[Päiväine]] om suves keskpäivän.
 
 [[Kategorii:Manpoled]]
