*Empty MediaWiki Message*

--- a/Mafii.mw
+++ b/Mafii.mw
@@ -1,4 +1,4 @@
-'''Mafii''' om [[Sicilii|Sicilijan]] kriminaline kund [[Italii|Italijas]], kudamb valatoitab töižed-ki valdkundad, ozutesikš, [[AÜV]].
+'''Mafii''' om [[Sicilii|sicilijalaine]] kriminaline kund [[Italii|Italijas]], kudamb valatoitab töižed-ki valdkundad, ozutesikš, [[AÜV]].
 
 Nece om kriminaližiden gruppiden "kanz", kudambal om ühthine organizacii, struktur i ičtazvedandan kodeks. Kaikuččel gruppal om ičeze territorii, kus se reketiruib biznesad.
 
