*Empty MediaWiki Message*

--- a/Vintaž.mw
+++ b/Vintaž.mw
@@ -2,7 +2,7 @@
 
 Modas vai dizainas ''vintaž''-termin znamoičeb enččen epohan originaližed modižed kalud. 
 
-Vintažine stil' tuli modha [[1990-žed voded|1990il vozil]], konz vintažad pidaškanziba tutabad aktörad da top-modelid.
+Vintažine stil' tuli modha [[1990-žed voded|1990:il vozil]], konz vintažad pidaškanziba tutabad aktörad da top-modelid.
 {{stub}}
 
 [[Kategorii:Mod]]
